# third-eye-mcp

./: .env.example  .gitignore  .npmignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE_CODE_SETUP.md  CONTRIBUTING.md  FINAL_OVERSEER_VISION.md  LICENSE  Makefile  README.md  USER_GUIDE.md  WOW_FEATURES_PLAN.md  alembic.ini  check-routing.ts  config.yaml  docker-compose.yml  drizzle.config.ts  end_to_end_clean_ship_plan.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start.sh  test-agent-name-fix.ts  test-ai-integration.ts  test-complete-pipeline.ts  test-mcp-integration.ts  third-eye-mcp.code-workspace  third_eye_mcp_vision_byo.md  training_cli.py  tsconfig.json  verify-eyes-transformation.ts  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
cli/: index.ts  package.json
db/: README.md
docker/: Dockerfile.api  Dockerfile.bun  Dockerfile.control-plane  Dockerfile.control-plane.prod  Dockerfile.mcp  Dockerfile.overseer  Dockerfile.ui  README.md  docker-compose.yml  entrypoint.sh  prometheus.yml
docs/: ADMIN_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  DATABASE.md  FAQ.md  MCP_API.md  PROVIDERS.md  README.md  cli.md  configuration.md  getting-started.md  publishing.md  usage.md
infra/: README.md
mcp-bridge/: .eslintrc.cjs  package.json  tsconfig.json
scripts/: apply-migrations.ts  backup-db.ts  capture-demo.ts  check-health.ts  dev-api.sh  docs_validate.py  fix-all-qa-issues.py  health-check.ts  migrate-and-seed.ts  postinstall.ts  print-config-delta.py  remove-hardcoded-personas.py  restore-db.ts  (+17 more)
(+402 files in other folders)
