[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "third-eye-mcp"
version = "0.1.0"
description = "Third Eye MCP: Groq powered orchestration layer"
readme = "README.md"
authors = [{name = "Third Eye Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "redis>=5.0.1",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "psycopg[binary,pool]>=3.1.19",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.2",
    "cryptography>=43.0.1",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.2.0",
    "prometheus-client>=0.20.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.2",
    "fakeredis>=2.23.3",
]

[project.scripts]
third-eye = "third_eye.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["third_eye"]
